--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -41,6 +41,7 @@ jobs:
         run: sudo apt update && sudo apt upgrade -y && sudo apt dist-upgrade -y
 
       - name: Install pyenv dependencies
+        if: ${{ steps.build-required.outputs.value == true }}
         run: >
           sudo apt-get install make build-essential libssl-dev zlib1g-dev
           libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm
@@ -48,6 +49,7 @@ jobs:
           libffi-dev liblzma-dev
 
       - name: Install pyenv
+        if: ${{ steps.build-required.outputs.value == true }}
         run: |
           git clone https://github.com/pyenv/pyenv.git ~/.pyenv
           cd ~/.pyenv && src/configure && make -C src
@@ -57,21 +59,25 @@ jobs:
           echo 'eval "$(pyenv init --path)"' >> ~/.bash_profile
 
       - name: Install Python ${{ matrix.python }}
+        if: ${{ steps.build-required.outputs.value == true }}
         run: pyenv install ${{ matrix.python }}
         shell: bash -l {0}
 
       - name: Package Python ${{ matrix.python }}
+        if: ${{ steps.build-required.outputs.value == true }}
         run: |
           cd ~/.pyenv/versions
           tar cvf ~/python-${{ matrix.python }}-${{ steps.ubuntu-name.outputs.arch }}.tar.gz \
           ${{ matrix.python }}
 
       - name: Initialize mandatory git config
+        if: ${{ steps.build-required.outputs.value == true }}
         run: |
           git config user.name "GitHub Actions"
           git config user.email noreply@github.com
 
       - name: Add Python ${{ matrix.python }} to repository file
+        if: ${{ steps.build-required.outputs.value == true }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -82,6 +88,7 @@ jobs:
           git pull --rebase && git push
 
       - name: Create release
+        if: ${{ steps.build-required.outputs.value == true }}
         env:
           tag: ${{ steps.ubuntu-name.outputs.distro }}-python-${{ matrix.python }}
           title: ${{ steps.ubuntu-name.outputs.distro }}-python-${{ matrix.python }}
